[gd_scene load_steps=8 format=2]

[ext_resource path="res://enemies/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://enemies/enemy_heavy.png" type="Texture" id=2]
[ext_resource path="res://enemies/EnemyHeavy.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=4]
resource_local_to_scene = true
extents = Vector2( 32, 24 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 48 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 64, 48 )

[sub_resource type="SpriteFrames" id=3]
resource_local_to_scene = true
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[node name="EnemyHeavy" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="HitBox" parent="." index="0"]
shape = SubResource( 4 )

[node name="AnimatedSprite" parent="." index="1"]
frames = SubResource( 3 )
flip_v = true

[node name="ShootTimer" type="Timer" parent="." index="2"]
wait_time = 0.5
autostart = true

[node name="ShootPos1" type="Position2D" parent="." index="3"]
position = Vector2( -20, 17 )

[node name="ShootPos2" type="Position2D" parent="." index="4"]
position = Vector2( -10, 17 )

[node name="ShootPos3" type="Position2D" parent="." index="5"]
position = Vector2( 10, 17 )

[node name="ShootPos4" type="Position2D" parent="." index="6"]
position = Vector2( 20, 17 )

[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
